--- a/package.json
+++ b/package.json
@@ -21,12 +21,9 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
+    "test": "react-scripts test --watchAll",
     "eject": "react-scripts eject",
-    "db": "json-server --watch data/db.json --port 3001",
-    "lint": "eslint 'src/**/*.{js,jsx,ts,tsx}'",
-    "lint:fix": "eslint 'src/**/*.{js,jsx,ts,tsx}' --fix",
-    "format": "prettier --write 'src/**/*.{js,jsx,ts,tsx,json,css,scss,md}'"
+    "db": "json-server --watch data/db.json --port 3001"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -44,12 +41,20 @@
     ]
   },
   "devDependencies": {
-    "@testing-library/dom": "^8.4.0",
-    "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^14.0.1",
+    "@testing-library/dom": "^10.4.0",
+    "@testing-library/jest-dom": "^6.5.0",
+    "@testing-library/react": "^16.0.1",
     "@testing-library/user-event": "^14.5.2",
     "@types/react-router-dom": "^5.3.3",
     "@types/shortid": "^0.0.32",
+    "eslint": "^8.12.0",
+    "eslint-config-prettier": "^8.1.0",
+    "eslint-plugin-prettier": "^5.2.1",
+    "eslint-plugin-react": "^7.37.1",
+    "eslint-plugin-react-hooks": "^4.6.2",
+    "globals": "^15.10.0",
+    "jest": "^29.7.0",
+    "prettier": "^3.3.3",
     "sass": "^1.79.4",
     "ts-jest": "^29.2.5",
     "typescript-eslint": "^8.8.1"
